--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
+@import url(/iconfont/iconfont.css);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.icon {
+		font-family: "iconfont";
+    font-size: 2rem;
+    font-style: normal;
+    color: white;
+	}
+}
